--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "cSpell.words": [
         "sklearn"
     ],
-    "python.formatting.provider": "none",
+    "python.formatting.provider": "black",
     "editor.formatOnSave": true,
 
     "editor.codeActionsOnSave": {
